@@ -164,8 +164,8 @@ public class MailDAOServiceImpl extends AbstractDAOService<Mail, MailRecord> imp
 
 		final var result = query.fetch();
 		var total = 0;
-		if(result.size() > 0) {
-			total = result.get(0).getValue("total", Integer.class);
+		if(!result.isEmpty()) {
+			total = result.getFirst().getValue("total", Integer.class);
 		}
 
 		final var mails = result.into(Mail.class);
