@@ -187,8 +187,8 @@ public class UserDAOServiceImpl extends AuditableDAOService<User, UserAuditTrail
 
 		final var result = query.fetch();
 		var total = 0;
-		if(result.size() > 0) {
-			total = result.get(0).getValue("total", Integer.class);
+		if(!result.isEmpty()) {
+			total = result.getFirst().getValue("total", Integer.class);
 		}
 
 		final var users = result.into(User.class);
